locale warnings